--- a/src/style.css
+++ b/src/style.css
@@ -44,18 +44,19 @@
     color: #f1f1f1;
 }
 
-.button{
+.buttonSearch {
     background-color: transparent;
     border: 0;
     display: flex;
     justify-content: center;
     align-items: center;
-    cursor:pointer ;
-    transition: transform 0.5s;
+    cursor: pointer;
+    transition: transform 0.3s ease-out;
+    transform: scale(1);
 }
 
-.button:hover{
-    transform: scale(1.2);
+.buttonSearch:hover {
+    transform: scale(1.3);
 }
 
 .main{
