--- a/src/style.css
+++ b/src/style.css
@@ -1,108 +1,133 @@
-.container{
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    background: linear-gradient(#121212, #212b46);
+.container {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background: linear-gradient(#121212, #212b46);
 }
 
-.title{
-    font-size: 85px;
-    color: white;
-    animation: fliptitle 2s;
+.title {
+  font-size: 85px;
+  color: rgba(207, 12, 149, 0.774);
+  animation: fliptitle 2s;
+  text-decoration: normal;
+  text-align: center;
+  -o-text-overflow: clip;
+  text-overflow: clip;
+  white-space: pre;
+  text-shadow: 0 0 10px rgba(7, 7, 7, 0.288), 0 0 20px rgba(255, 255, 255, 0),
+    0 0 30px rgba(255, 255, 255, 0), 0 0 20px #741166, 0 0 30px #a50490c4,
+    0 0 80px #5e0f5488, 0 0 100px #66155ba8;
+  -webkit-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
+  -moz-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
+  -o-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
+  transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
 }
 
-@keyframes fliptitle{
-    from{
-        transform: rotatex(90deg);
-    }
-    to{
-        transform: rotateX(0deg);
-    }
+title:hover {
+  text-shadow: 0 0 10px rgba(255, 255, 255, 1), 0 0 20px rgba(255, 255, 255, 1),
+    0 0 30px rgba(255, 255, 255, 1), 0 0 40px #00ffff, 0 0 70px #00ffff,
+    0 0 80px #00ffff, 0 0 100px #00ffff;
 }
 
-.containerInput{
-    background-color: rgba(255, 255, 255, 0.2);
-    padding: 15px;
-    margin: 34px 0px;
-    display: flex;
-    border-radius: 8px;
-    box-shadow: 1px 3px 8px rgba(0,0,0, 0.5);
+@keyframes fliptitle {
+  from {
+    transform: rotatex(90deg);
+  }
+  to {
+    transform: rotateX(0deg);
+  }
 }
 
-.containerInput input{
-    background-color: transparent;
-    border: 0;
-    font-size: 20px;
-    color: white;
-    outline: none;
-    margin-right: 8px;
+.containerInput {
+  background-color: rgba(255, 255, 255, 0.2);
+  padding: 15px;
+  margin: 34px 0px;
+  display: flex;
+  border-radius: 8px;
+  box-shadow: 1px 3px 8px rgba(0, 0, 0, 0.5);
 }
 
-.containerInput input::placeholder{
-    color: #f1f1f1;
+.containerInput input {
+  background-color: transparent;
+  border: 0;
+  font-size: 20px;
+  color: white;
+  outline: none;
+  margin-right: 8px;
+}
+
+.containerInput input::placeholder {
+  color: #f1f1f1;
 }
 
 .buttonSearch {
-    background-color: transparent;
-    border: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    transition: transform 0.3s ease-out;
-    transform: scale(1);
+  background-color: transparent;
+  border: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  transition: transform 0.3s ease-out;
+  transform: scale(1);
 }
 
 .buttonSearch:hover {
-    transform: scale(1.3);
+  transform: scale(1.3);
 }
 
-.main{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    background-color: white;
-    width: 500px;
-    border-radius: 8px;
+.main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-color: rgb(139, 139, 139);
+  width: 500px;
+  border-radius: 8px;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
-.main h2{
-    margin: 16px 0;
-    font-size: 39px ;
+.result {
+  font-size: 20px;
+  font-weight: 900;
 }
 
-.main span{
-    margin-bottom: 16px;
-    font-weight: bold;
+.main h2 {
+  margin: 16px 0;
+  font-size: 39px;
 }
 
-@media(max-width:720px){
-    .title{
-        font-size: 60px;
-    }
-
-    .main h2{
-        font-size: 20px;
-    }
-
-    .main{
-
-        width: 80%;
-        min-width: 250px;
-    }
+.main span {
+  margin-bottom: 16px;
+  font-weight: bold;
 }
 
-@media(max-width:520px){
-    .title{
-        font-size: 50px;
-    }
+@media (max-width: 720px) {
+  .title {
+    font-size: 60px;
+  }
+
+  .main h2 {
+    font-size: 20px;
+  }
+
+  .main {
+    width: 80%;
+    min-width: 250px;
+  }
 }
 
-@media(max-width:420px){
-    .title{
-        font-size: 39px;
-    }
+@media (max-width: 520px) {
+  .title {
+    font-size: 50px;
+  }
+}
+
+@media (max-width: 420px) {
+  .title {
+    font-size: 39px;
+  }
 }
